# trustee

.github/workflows/: e2e.yaml  kbs-e2e-az-snp-vtpm.yaml  kbs-e2e-az-tdx-vtpm.yaml  kbs-e2e-azure-vtpm.yml  kbs-e2e.yaml  kbs-e2e.yml  mgns.yaml  rust.yml
attestation-service/docs/: parsed_claims.md
attestation-service/verifier/: Cargo.toml
attestation-service/verifier/src/az_snp_vtpm/: mod.rs
attestation-service/verifier/src/az_tdx_vtpm/: mod.rs
attestation-service/verifier/src/sgx/: mod.rs
attestation-service/verifier/src/snp/: mod.rs
attestation-service/verifier/src/tdx/: quote.rs
kbs/test/: Makefile
kbs/tools/client/: Cargo.toml
proto/: attestation.proto
src/api/: Cargo.toml
src/api/src/attestation/coco/: grpc.rs
src/api_server/: Cargo.toml
test/: Makefile
tools/client/: Cargo.toml
tools/client/src/: main.rs
