[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# attestation_agent = { git = "https://github.com/confidential-containers/attestation-agent" }
attestation_agent = { git = "https://github.com/mkulke/attestation-agent", rev = "863aee8", features = ["sev-snp-vtpm-attester"] }
# attestation_agent = { path = "../../../attestation-agent", features = ["sev-snp-vtpm-attester"] }
anyhow.workspace = true
api-server.workspace = true
clap = { version = "4.0.29", features = ["derive"] }
env_logger.workspace = true
log.workspace = true
tokio.workspace = true

[features]
default = ["cc_kbc"]
cc_kbc = ["attestation_agent/cc_kbc"]
